@@ -2,7 +2,7 @@
 <!DOCTYPE book PUBLIC "-//OASIS//DTD DocBook XML V4.5//EN" "../../../docbook-xml-4.5/docbookx.dtd">
 <book lang="en">
   <bookinfo>
-    <title>OmegaT 3.1- Manuale dell'Utente</title>
+    <title>OmegaT 3.5- Manuale dell'Utente</title>
 
     <authorinitials>vs</authorinitials>
 
