@@ -194,8 +194,8 @@ TF_MENU_FILE_COMPILE=Crea i &documenti di arrivo
 
 TF_MENU_FILE_SINGLE_COMPILE=Crea il &documento tradotto corrente
 
-TF_MENU_FILE_MED_OPEN=Apri progetto MED
-TF_MENU_FILE_MED_CREATE=Crea progetto MED
+TF_MENU_FILE_MED_OPEN=Apri progetto MED...
+TF_MENU_FILE_MED_CREATE=Crea progetto MED...
 
 MW_PROJECTMENU_EDIT=&Propriet\u00e0...
 
@@ -305,8 +305,8 @@ TF_MENU_GOTO_NEXT_UNIQUE=Segmento uni&voco successivo
 
 TF_MENU_TOOLS=&Strumenti
 
-TF_MENU_TOOLS_VALIDATE=Con&valida i tag...
-TF_MENU_TOOLS_SINGLE_VALIDATE=Convalida i tag per il documento &attivo...
+TF_MENU_TOOLS_CHECK_ISSUES=Verifica problem&i
+TF_MENU_TOOLS_CHECK_ISSUES_CURRENT_FILE=Verifica problemi per il do&cumento attivo
 TF_MENU_TOOLS_STATISTICS_STANDARD=&Statistiche
 TF_MENU_TOOLS_STATISTICS_MATCHES=Statistiche delle &concordanze
 TF_MENU_TOOLS_STATISTICS_MATCHES_PER_FILE=Statistiche delle concordanze per &file
@@ -376,6 +376,8 @@ MW_OPTIONSMENU_ACCESS_CONFIG_DIR=Accedi alla cartella &di configurazione
 
 MW_OPTIONSMENU_SPELLCHECK=Correzione &ortografica...
 
+MW_OPTIONSMENU_LANGUAGETOOL=LanguageTool...
+
 TF_MENU_HELP=&Aiuto
 
 TF_MENU_HELP_CONTENTS=&Manuale dell'utente...
@@ -391,12 +393,6 @@ TF_TM_LOAD_ERROR=Caricamento della memoria di traduzione {0} del progetto non ri
 TF_LOAD_ERROR=Impossibile caricare il progetto indicato.
 
 TF_COMPILE_ERROR=Impossibile compilare i file del progetto.
-
-TF_NOTICE_BAD_TAGS=Voci con tag modificati
-
-TF_NOTICE_OK_TAGS=Non sono stati rilevati errori nei tag
-
-TF_NOTICE_TITLE_TAGS=Convalida dei tag...
 
 TF_MESSAGE_COMPILE=Non \u00e8 stato possibile creare i documenti tradotti poich\u00e9 alcuni tag sono danneggiati o mancanti. Correggere i problemi con i tag prima di usare nuovamente il comando 'Crea i documenti di arrivo'.
 
@@ -750,9 +746,9 @@ PP_BROWSE_W_GLOS=File del glossario scrivibile
 
 PP_REPOSITORIES=Mappatura del deposito...
 
-PP_MESSAGE_BADPROJ=Le cartelle di alcuni progetti sembrano essere state spostate. \n\u00c8 necessario specificare la nuova posizione o ricreare le cartelle.
+PP_MESSAGE_BADPROJ=Le cartelle di alcuni progetti sembrano essere state spostate. \u00c8 necessario specificare la loro nuova posizione o ricreare le cartelle.
 
-PP_MESSAGE_CONFIGPROJ=Selezionare la lingua dei file di partenza e di quella di arrivo in cui si desidera tradurre. \nQui \u00e8 possibile specificare la posizione personalizzata delle cartelle del progetto.
+PP_MESSAGE_CONFIGPROJ=Selezionare la lingua dei file di partenza e di quella di arrivo in cui si desidera tradurre. Qui \u00e8 possibile specificare la posizione personalizzata delle cartelle del progetto.
 
 PP_SAVE_PROJECT_FILE=Crea un nuovo progetto
 
@@ -1329,7 +1325,7 @@ ABOUTDIALOG_TITLE=Panoramica su OmegaT
 ABOUTDIALOG_COPYRIGHT=Copyright \u00a9 2000-2016 Keith Godfrey, Maxym Mykhalchuk et al
 
 ABOUTDIALOG_LICENSE_BUTTON=&Licenza
-ABOUTDIALOG_CONTRIBUTORS=OmegaT \u00e8 un software di traduzione assistita (CAT, Computer Assisted Translation) multi-piattaforma dalle numerose funzioni, tra cui: ricerca delle concordanze parziali, uso di memorie di traduzione, ricerca di parole chiave, glossari e integrazione delle traduzioni all'interno di progetti aggiornati.\n\nOmegaT \u00e8 un lavoro originale di Keith Godfrey.\nDidier Briel \u00e8 il gestore del progetto OmegaT.\n\nHanno contribuito al codice:\nZoltan Bartko, Volker Berlin, Didier Briel, Kim Bruning, Alex Buloichik (sviluppatore principale), Thomas Cordonnier, Sandra Jean Chua, Enrique Est\u00e9vez Fern\u00e1ndez, Martin Fleurke, Wildrich Fourie, Tony Graham, Phillip Hall, Jean-Christophe Helary, Chihiro Hio, Thomas Huriaux, Hans-Peter Jacobs, Kyle Katarn, Piotr Kulik, Ibai Lakunza Velasco, Guido Leenders, Aaron Madlon-Kay, Fabi\u00e1n Mandelbaum, Manfred Martin, Adiel Mittmann, Hiroshi Miura, John Moran, Maxym Mykhalchuk, Arno Peters, Henry Pijffers, Briac Pilpr\u00e9, Tiago Saboga, Andrzej Sawu\u0142a, Benjamin Siband, Yu Tang, Rashid Umarov, Antonio Vilei, Ilia Vinogradov, Martin Wunderlich e Michael Zakharov\n\nIl dettaglio degli altri contributi si trova nel file readme.txt\n\nOmegaT usa le seguenti librerie:\n  HTMLParser 1.6 di Somik Raha, Derrick Oswald et al (licenza LGPL)\n  VLDocking Framework (licenza LGPL)\n  Jmyspell (licenza LGPL)\n  SVNKit (licenza TMate)\n  Sequence Library (licenza Sequence Library)\n  ANTLR (licenza ANTLR 3)\n  SQLJet (licenza GPL)\n  JGit (licenza di distribuzione Eclipse)\n  JSch (licenza JSch)\n  jsch-agent-proxy (licenza jsch-agent-proxy)\n  Diff (GPL)\n  trilead-ssh2 (licenza Trilead SSH)\n  Lucene (licenza Apache 2.0)\n  Apache Commons (licenza Apache 2.0)\n  LanguageTool (licenza LGPL e altre)\n  PDFBox (licenza Apache 2.0)\n  SuperTMXMerge (licenza Apache 2.0)\n  Groovy (licenza Apache 2.0)\n  slf4j (licenza MIT)\n  juniversalchardet (GPL)\n  DictZip da JDict (GPL)\n  mALIGNa (licenza MIT)\n  trie4j (licenza Apache 2.0)
+ABOUTDIALOG_CONTRIBUTORS=OmegaT \u00e8 un software di traduzione assistita (CAT, Computer Assisted Translation) multi-piattaforma dalle numerose funzioni, tra cui: ricerca delle concordanze parziali, uso di memorie di traduzione, ricerca di parole chiave, glossari e integrazione delle traduzioni all'interno di progetti aggiornati.\n\nOmegaT \u00e8 un lavoro originale di Keith Godfrey.\nDidier Briel \u00e8 il gestore del progetto OmegaT.\n\nHanno contribuito al codice:\nLev Abashkin, Zoltan Bartko, Volker Berlin, Didier Briel, Kim Bruning, Alex Buloichik (lead developer), Thomas Cordonnier, Sandra Jean Chua, Enrique Est\u00e9vez Fern\u00e1ndez, Martin Fleurke, Wildrich Fourie, Tony Graham, Phillip Hall, Jean-Christophe Helary, Chihiro Hio, Thomas Huriaux, Hans-Peter Jacobs, Kyle Katarn, Piotr Kulik, Ibai Lakunza Velasco, Guido Leenders, Aaron Madlon-Kay, Fabi\u00e1n Mandelbaum, Manfred Martin, Adiel Mittmann, Hiroshi Miura, John Moran, Maxym Mykhalchuk, Arno Peters, Henry Pijffers, Briac Pilpr\u00e9, Tiago Saboga, Andrzej Sawu\u0142a, Benjamin Siband, Yu Tang, Rashid Umarov, Antonio Vilei, Ilia Vinogradov, Martin Wunderlich e Michael Zakharov\n\nIl dettaglio degli altri contributi si trova nel file readme.txt\n\nOmegaT usa le seguenti librerie:\n  HTMLParser 1.6 di Somik Raha, Derrick Oswald et al (licenza LGPL)\n  VLDocking Framework (licenza LGPL)\n  Jmyspell (licenza LGPL)\n  SVNKit (licenza TMate)\n  Sequence Library (licenza Sequence Library)\n  ANTLR (licenza ANTLR 3)\n  SQLJet (licenza GPL)\n  JGit (licenza di distribuzione Eclipse)\n  JSch (licenza JSch)\n  jsch-agent-proxy (licenza jsch-agent-proxy)\n  Diff (GPL)\n  trilead-ssh2 (licenza Trilead SSH)\n  Lucene (licenza Apache 2.0)\n  Apache Commons (licenza Apache 2.0)\n  LanguageTool (licenza LGPL e altre)\n  PDFBox (licenza Apache 2.0)\n  SuperTMXMerge (licenza Apache 2.0)\n  Groovy (licenza Apache 2.0)\n  slf4j (licenza MIT)\n  juniversalchardet (GPL)\n  DictZip da JDict (GPL)\n  mALIGNa (licenza MIT)\n  trie4j (licenza Apache 2.0)
 
 # LicenseDialog.java
 
@@ -1743,7 +1739,7 @@ GUI_SPELLCHECKER_DICTIONARYLABEL=Cartella del file dizionario:
 
 GUI_SPELLCHECKER_FILE_CHOOSER_TITLE=Cartella file dizionario
 
-GUI_SPELLCHECKER_DIRECTORYCHOOSERBUTTON=&Scegli...
+GUI_SPELLCHECKER_DIRECTORYCHOOSERBUTTON=&Sfoglia...
 
 GUI_SPELLCHECKER_INSTALLBUTTON=&Installa nuovo dizionario...
 
@@ -1772,6 +1768,69 @@ GUI_SPELLCHECKER_ERROR_ON_INSTALL=Si \u00e8 verificato un errore durante lo scar
 
 # {0} is the segment number
 GUI_SPELLCHECKER_SOURCE_LABEL=&Sorgente (segmento {0}):
+
+# LanguageTool
+
+LT_SERVER_STARTED=Server LanguageTool avviato
+
+LT_SERVER_TERMINATED=Server LanguageTool terminato
+
+LT_API_VERSION_MISMATCH=La versione API di LanguageTool non corrisponde
+
+LT_BAD_CONFIGURATION=LanguageTool \u00e8 malconfigurato. Passaggio alla versione incorporata.
+
+LT_BAD_LOCAL_PATH=LanguageTool: percorso locale non corretto
+
+LT_BAD_SOCKET=LanguageTool: la porta locale non \u00e8 disponibile
+
+LT_WRONG_FORMAT_RESPONSE=LanguageTool: il server ha restituito XML mentre era atteso JSON. Assicurarsi che sia specificata la corretta versione API (l'URL deve includere "/v2/").
+
+LT_BAD_URL=LanguageTool: URL non corretto
+
+LT_SERVER_START_TIMEOUT=LanguageTool: timeout di avvio del server
+
+LT_ERROR_ON_CHECK=LanguageTool: si \u00e8 verificato un errore durante il controllo. LanguageTool sar\u00e0 disabilitato fino alla chiusura del progetto.
+
+# org.omegat.gui.dialogs.LanguageToolConfigurationDialog
+
+GUI_LANGUAGETOOL_DIALOG_TITLE=Impostazioni di LanguageTool
+
+GUI_LANGUAGETOOL_FILE_CHOOSER_TITLE=Selezionare languagetool-server.jar
+
+GUI_LANGUAGETOOL_JAR_FILE_FILTER=File JAR
+
+GUI_LANGUAGETOOL_EXTERNAL_CATEGORY_NAME=Regole definite manualmente
+
+GUI_LANGUAGETOOL_ADD_RULE_MESSAGE=Digita un nuovo ID regola
+
+GUI_LANGUAGETOOL_ADD_RULE_DIALOG_TITLE=Nuova regola LanguageTool
+
+# 0: Version of LanguageTool, e.g. "3.4"
+GUI_LANGUAGETOOL_NATIVE_BRIDGE=Incorporato (LanguageTool {0})
+
+GUI_LANGUAGETOOL_LOCAL_BRIDGE=Avvia il server locale
+
+GUI_LANGUAGETOOL_REMOTE_BRIDGE=Server remoto
+
+GUI_LANGUAGETOOL_BRIDGE_TYPE=Tipo di servizio
+
+GUI_LANGUAGETOOL_LOCAL_SERVER_PATH=Percorso di installazione locale:
+
+GUI_LANGUAGETOOL_CHOOSE_BUTTON=&Sfoglia...
+
+GUI_LANGUAGETOOL_URL=URL:
+
+GUI_LANGUAGETOOL_RULES=Regole
+
+GUI_LANGUAGETOOL_BAD_RULE_ID=L'ID regola pu\u00f2 contenere solo caratteri latini, trattini bassi e punti.
+
+GUI_LANGUAGETOOL_RULE_ALREADY_EXISTS=Questo ID \u00e8 gi\u00e0 utilizzato.
+
+GUI_LANGUAGETOOL_RULES_UNAVAILABLE=LanguageTool non \u00e8 disponibile per la lingua di destinazione.
+
+GUI_LANGUAGETOOL_RULES_UNAVAILABLE_ERROR=Si \u00e8 verificato un errore durante l'inizializzazione di LanguageTool.
+
+GUI_LANGUAGETOOL_RULES_UNAVAILABLE_NO_PROJECT=Carica un progetto per configurare le regole per le lingue di quel progetto.
 
 # org.omegat.gui.dialogs.DictionaryInstallerDialog
 
@@ -1927,7 +1986,6 @@ SCW_LIST_ENGINES=Motori di script disponibili:
 SCW_BEAN_ERROR=ERRORE: (declaring bean)
 SCW_SCRIPT_LOADED={0} caricato.
 SCW_SCRIPTS_FOLDER=Cartella degli script:
-SCW_SCRIPTS_FOLDER_CHOOSE=&Scegli...
 SCW_SCRIPTS_FOLDER_CHOOSE_TITLE=Seleziona cartella degli script
 SCW_NO_SCRIPT_SELECTED=Non \u00e8 stato selezionato alcuno script.
 SCW_CANNOT_READ_SCRIPT=Impossibile leggere il file di script selezionato.
@@ -2076,9 +2134,6 @@ TAG_ERROR_ORDER=Difettoso
 TAG_ERROR_WHITESPACE=Spazio vuoto
 TAG_ERROR_ORPHANED=Orfano
 TAG_ERROR_UNSPECIFIED=Non specificato
-TAG_FIX_COMMAND=Correggi
-TAG_FIX_ALL_COMMAND=Correggi tutto
-TAG_FIX_ALL_WARNING=Sicuri di voler correggere automaticamente tutti i tag? Questa operazione riguarder\u00e0 {0} segmenti e non potr\u00e0 essere annullata.
 TAG_FIX_ERROR_TITLE=Errore durante la correzione dei tag
 TAG_FIX_ERROR_MESSAGE=La traduzione \u00e8 stata modificata. Ripetere la convalida dei tag.
 
@@ -2321,7 +2376,7 @@ SEGPROP_KEY_LINKED=Tipo di concordanza
 ALIGNER_FILEPICKER=Allinea file
 ALIGNER_FILEPICKER_SOURCE=Fonte
 ALIGNER_FILEPICKER_TARGET=Destinazione
-ALIGNER_FILEPICKER_CHOOSE=Scegli...
+ALIGNER_FILEPICKER_CHOOSE=Sfoglia...
 ALIGNER_ERROR_LOADING=Si \u00e8 verificato un errore durante il caricamento dei file di partenza.
 ALIGNER_FILEPICKER_CHOOSE_SOURCE=Scegli file di partenza
 ALIGNER_FILEPICKER_CHOOSE_TARGET=Scegli file di arrivo
@@ -2407,3 +2462,49 @@ ALIGNER_ENUM_CALCULATOR_TYPE_NORMAL=Normale
 ALIGNER_ENUM_CALCULATOR_TYPE_POISSON=Poisson
 ALIGNER_ENUM_COUNTER_TYPE_WORD=Parola
 ALIGNER_ENUM_COUNTER_TYPE_CHAR=Carattere
+
+ISSUES_BUTTON_JUMP_TO_SEGMENT=&Passa al segmento
+ISSUES_BUTTON_SHOW_ALL=&Mostra tutto
+ISSUES_BUTTON_REFRESH=&Aggiorna
+ISSUES_WINDOW_TITLE=Problemi
+# 0: Total number of issues
+ISSUES_WINDOW_TITLE_TEMPLATE=Problemi ({0})
+# 0: File name
+# 1: Total number of issues
+ISSUES_WINDOW_TITLE_FILE_TEMPLATE=Problemi per {0} ({1})
+# 0: Number of issues displayed
+# 1: Total number of issues
+ISSUES_WINDOW_TITLE_FILTERED_TEMPLATE=Problemi ({0} di {1})
+# 0: File name
+# 1: Number of issues displayed
+# 2: Total number of issues
+ISSUES_WINDOW_TITLE_FILE_FILTERED_TEMPLATE=Problemi per {0} ({1} di {2})
+ISSUES_LOADING=<html><center>Caricamento...<br><br>Suggerimento: abilitare/disabilitare le verifiche in qualsiasi momento dal menu Opzioni.</center></html>
+ISSUES_NO_ISSUES_FOUND=Nessun problema trovato
+ISSUES_TABLE_COLUMN_ENTRY_NUM=Segmento
+ISSUES_TABLE_COLUMN_TYPE=Tipo
+ISSUES_TABLE_COLUMN_DESCRIPTION=Descrizione
+ISSUES_TYPE_ALL=Tutto
+# 0: Type label ("All", "Tags", etc.)
+# 1: Number of issues of that type
+ISSUES_TYPE_SUMMARY_TEMPLATE={0} ({1})
+ISSUES_WINDOW_MENU_OPTIONS=Opzioni
+# 0: Name of issue provider ("Spelling Issues", "Tag Issues")
+ISSUES_WINDOW_MENU_OPTIONS_TOGGLE_PROVIDER=Verifica {0}
+ISSUES_SPELLING_PROVIDER_NAME=Problemi ortografici
+ISSUES_SPELLING_TYPE=Ortografia
+ISSUES_SPELLING_WORD_DELIMITER=, 
+# 0: Misspelled word
+ISSUES_SPELLING_LEARN_ITEM=Aggiungi al dizionario: \u201c{0}\u201d
+# 0: Misspelled word
+ISSUES_SPELLING_IGNORE_ITEM=Ignora: \u201c{0}\u201d
+ISSUES_TAGS_TYPE=Tag
+# 0: Tag error description ("Missing", "Duplicate", etc.)
+# 1: Number of times error occurs
+ISSUES_TAGS_ERROR_TEMPLATE={0} x{1}
+ISSUES_TAGS_ERROR_DELIMITER=, 
+ISSUES_TAGS_BUTTON_APPLY_FIX=Applica &correzione
+ISSUES_LANGUAGETOOL_PROVIDER_NAME=Problemi di LanguageTool
+ISSUES_LT_TYPE=LanguageTool
+# 0: Rule description
+ISSUES_LT_DISABLE_RULE=Disabilita regola \u201c{0}\u201d
